<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Signup">

    <EditText
        android:id="@+id/etUserUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:digits="0123456789abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:hint="@string/etUserHint"
        android:importantForAutofill="no"
        android:inputType=""
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etEmailUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:digits="-_.:;,@0123456789abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:hint="@string/etEmailHint"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etPassUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:digits="-_.:;,@0123456789abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:hint="@string/etPassHint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbTerms"
            android:textColor="@color/gray2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTermsLinkable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/tvTermsLinkable"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvOfListhero"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBackSignin"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/btnBackSignin"
                style="@style/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/btnSignup"
                style="@style/button" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>