<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Signin">

    <EditText
        android:id="@+id/etEmailIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:digits="-_.:;,@0123456789abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:hint="@string/etEmailHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etPassIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:digits="-_.:;,@0123456789abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:hint="@string/etPassHint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/tvForgotPass"
            android:textAlignment="viewEnd"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbLogged"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/cbLogged"
        android:textColor="@color/gray2"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCreate"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/btnCreate"
                style="@style/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSignin"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/btnSignin"
                style="@style/button" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>